--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -3,7 +3,7 @@
 [connections.mysql]
 dialect = "mysql"
 host = "localhost"
-port = 3306
-database = "xxx"
-username = "xxx"
-password = "xxx"
+port = 8501
+database = "VTHREE"
+username = "root"
+password = "ABT211002"
