--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -58,6 +58,7 @@ PyMySQL==1.0.2
 pyparsing==3.0.9
 pyresparser==1.0.6
 pyrsistent==0.18.1
+python==3.9.0
 python-dateutil==2.8.2
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
